# editor

./: .gitignore  README.md
client/: CMakeLists.txt  client.cpp  client.cpp~  main.cpp  makefile  todo.org
client/lib/FontInfo/: CMakeLists.txt~  fontInfo.cpp  fontInfo.h  fontInfo.h~
client/lib/RenderingEngine/: CMakeLists.txt  engine.cpp  engine.cpp~  engine.h  engine.h~  shader.frag  shader.vert  textShader.frag  textShader.vert  triangleShader.frag  triangleShader.vert
client/lib/SocketClient/: CMakeLists.txt  socket_client.cpp  socket_client.h
client/lib/Window/: CMakeLists.txt  glfw_window.h
client/src/: client.cpp  client.cpp~  editor.cpp  editor.hpp  makefile  text_client.cpp~
client/src/font/: #shader.vert#  #translate.lisp#  .#shader.vert  .#translate.lisp  font.cpp  font.cpp~  font.h  font.h~  font_test.cpp  font_test.cpp~  generate-font.lisp  generate-font.lisp~  load.lisp  makefile  translate.fasl  translate.lisp  translate.lisp~
client/src/font/UbuntuMono-R/: asterisk.txt  big_D.txt  big_E.txt  big_G.txt  big_H.txt  big_I.txt  big_J.txt  big_O.txt  big_U.txt  close_brace.txt  close_bracket.txt  font-info.txt  pipe.txt  plus.txt  question_mark.txt  quote.txt  small_k.txt  small_l.txt  small_n.txt  small_o.txt  small_r.txt  small_t.txt  small_z.txt  underscore.txt
client/src/glfw/: glfw_test.cpp  glfw_window.cpp  glfw_window.h~  key_callback.cpp  key_callback.h  makefile
client/src/socket/: #socket_client.h#  makefile  size_t sendmsg(int sockfd, const struct msghdr *msg, int flags);  socket_client.cpp  socket_client.cpp~  socket_client.h  socket_client.h~  socket_test.cpp
client/src/vulkan/: engine.cpp  engine.cpp~  engine.h  engine.h~  engine_init.cpp  engine_init.cpp~  engine_pipeline.cpp  engine_test  engine_test.cpp  engine_test.cpp~  frag.spv  main  makefile  makefile~  renderer_old.cpp  renderer_old.h  shader.frag  shader.vert  vert.spv
client/test/: 240303.cpp  240304.cpp  class_member_pointer.cpp  function_test.cpp  makefile  member_function_bind_example.cpp  member_function_bind_example.cpp~  member_function_pointer_test.cpp  new_array_test.cpp  rit_test.cpp  vector_print_test.cpp
client/test/client-cmake-file-structure/: client.cpp~
client/test/client-cmake-file-structure/.cache/clangd/index/: client.cpp.70A1A53328A091F6.idx  engine.cpp.DF3D27C36CF03E3C.idx  engine.h.38506AE577564DF4.idx  fontInfo.cpp.74841206857F37E2.idx  fontInfo.cpp.97EDD9A738519CB1.idx  fontInfo.h.0DBA0D57852EE72C.idx  fontInfo.h.4C608832D4445FF4.idx  glfw_window.cpp.69B12E10A279AAB5.idx  glfw_window.h.2F1BE5380F3B6772.idx  socket_client.cpp.C9970D1E40EE0C46.idx  socket_client.h.D201C64D66BB3061.idx
client/test/client-cmake-file-structure/font/: generate-font.lisp  generate-font.lisp~  load.lisp~
client/test/client-cmake-file-structure/font/txt/UbuntuMono-R/: ampersand.txt  ampersat.txt  backquote.txt  backslash.txt  big_F.txt  big_K.txt  big_L.txt  big_N.txt  big_Q.txt  big_S.txt  big_V.txt  big_W.txt  big_Y.txt  caret.txt  colon.txt  eight.txt  exclamation_mark.txt  five.txt  font-txt.info  greater_than.txt  hyphen.txt  less_than.txt  nine.txt  one.txt  open_brace.txt  open_bracket.txt  percent.txt  seven.txt  single_quote.txt  small_b.txt  small_c.txt  small_e.txt  small_f.txt  small_h.txt  small_j.txt  small_m.txt  small_s.txt  small_v.txt  three.txt  tilde.txt  (+2 more)
client/test/client-cmake-file-structure/lib/FontInfo/: CMakeLists.txt  fontInfo.cpp~
client/test/client-cmake-file-structure/lib/RenderingEngine/: CMakeLists.txt~  CMakelists.txt~  engine.cpp~
client/test/client-cmake-file-structure/lib/SocketClient/: CMakeLists.txt~  socket_client.cpp
client/test/client-cmake-file-structure/lib/Window/: CMakeLists.txt~
client/test/make/: makefile
font/: generate-font.lisp  load.lisp
font/txt/UbuntuMono-R/: B.txt  C.txt  D.txt  G.txt  N.txt  P.txt  R.txt  X.txt  Y.txt  Z.txt  a.txt  ampersand.txt  ampersat.txt  asterisk.txt  b.txt  backquote.txt  backslash.txt  big_A.txt  big_B.txt  big_C.txt  big_E.txt  big_F.txt  big_H.txt  big_I.txt  big_J.txt  c.txt  (+86 more)
server/: gc-log.txt  load.fasl  load.lisp  new-server.fasl  new-server.lisp  new-server.lisp~  server.lisp
server/src/: #new-my-text.lisp#  .#new-my-text.lisp  .emacs.desktop  doubly-linked-list.lisp~  multi-cursor-list.lisp  multi-cursor-tree.lisp  multi-cursor-tree.lisp~  new-my-text.lisp  new-my-text.lisp~  server.lisp  text-manager.lisp  text-manager.lisp~  text.lisp~
server/test/: #doubly-linked-list-test.lisp#  aa-index-tree-test.lisp  doubly-linked-list-test.fasl  doubly-linked-list-test.lisp  lparallel-test.lisp  multi-cursor-list-test.lisp  new-text-manager-test.fasl  new-text-manager-test.lisp  new-text-manager-test.lisp~  result.txt  text-manager-test.lisp  text-test.lisp~
server/utility/: defobj-old.lisp~  defobj.lisp  my-utils.lisp
utils/: defobj.lisp  defobj.lisp~  my-utils.lisp
(+1 files in other folders)
